--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
   "description": "php upload class",
   "type": "library",
   "license": "MIT",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require": {
     "php": ">=7.0.0",
     "ext-curl": "*",
     "ext-json": "*",
     "ext-gd": "*",
-    "woodlsy/http-client": "dev-master"
+    "woodlsy/http-client": "*"
   },
   "autoload": {
     "psr-4": {
